deploy/central/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central
spec:
  selector:
    app: central
  ports:
    - port: 8080
      targetPort: 8080
