deploy/central/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: central
spec:
  to:
    kind: Service
    name: central
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
